# AVR

./: I2C_LCD_4bit_SUB.bas  LICENSE  blink.txt  buttons.go  go.mod  joystickHW-504.go  lcd.go  main.go
lib/: buttons.go  rfid.go  rfid_me0100.go  rgbor.go  stepper.go  testing.txt
rust/avr-rs-test/: Cargo.toml  README.md
rust/avr-rs-test/.cargo/: avr-mega2560.json
rust/avr-rs-test/src/: dht11.rs  logger.rs  main.rs  rc522.md  rc522.rs  rgba_sensor.rs  servo.rs  timer.rs  water_sensor.rs
